synto site update

--- a/index.html
+++ b/index.html
@@ -28,10 +28,11 @@
       <h1>Synto</h1>
 
       <p class="hero-text">
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-        eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
-        ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-        aliquip ex ea commodo consequat.
+        Synto is a minimalist, night-friendly code editor built to stay out of your way.
+        It opens like a blank text editor, but comes with syntax highlighting, smart editing, and optional local AI assistance.
+
+        AI features run fully on your machine using open-source models, keeping your code private and offline.
+        No clutter. No distractions. Just focus.
       </p>
   </section>
 
