--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <!-- NAVBAR -->
   <header class="nav">
     <a href="https://github.com/kish-0/Synto/releases" target="_blank" rel="noopener noreferrer"><button class="nav-btn">Get Synto</button></a>
-    <a href="https://github.com/kish-0" target="_blank" rel="noopener noreferrer"><button class="nav-btn">Developer</button></a>
+    <a href="https://github.com/kish-0" target="_blank" rel="noopener noreferrer"><button class="nav-btn">My Github</button></a>
   </header>
 
   <!-- HERO -->
